argo/examples/ci/github/gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: github-gateway
  labels:
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
spec:
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  deploySpec:
    metadata:
      name: "github-gateway"
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client"
          command: ["/bin/gateway-client"]
        - name: "github-events"
          image: "quay.io/fakod/github-gateway"
          command: ["/bin/github-gateway"]
      serviceAccountName: default
  configMap: github-gateway-configmap
  type: "github"
  eventVersion: "1.0"
  watchers:
    sensors:
      - name: "github-sensor"
